# FastAPI_SQLAlchemi_Kafka

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/order/: main.py
app/product/: main.py
app/product/api/: product.py
app/user/: main.py
app/user/models/: user.py
cart/: Dockerfile  entrypoint.sh  main.py
cart/infra/: settings.py
cart/repositories/: order_repo.py
order/: Dockerfile  entrypoint.sh  pyproject.toml
order/alembic/: env.py
order/alembic/versions/: 2026_01_30_1847-334b830726c4_.py
order/api/: order.py
order/infra/: base.py
order/models/: order.py
order/repositories/: order_repo.py
product/: Dockerfile  entrypoint.sh  main.py  pyproject.toml
product/alembic/: env.py
product/infra/: base.py  settings.py
product/models/: product.py
product/repositories/: product_repo.py
user/: Dockerfile  entrypoint.sh  main.py  pyproject.toml
user/api/: user.py
user/infra/: settings.py
user/models/: user.py
user/repositories/: user_repo.py
