[project]
name = "fastapi-sqlalchemi-kafka"
version = "0.1.0"
description = ""
authors = [
    {name = "MARVRK",email = "155836501+MARVRK@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fastapi-sqlalchemi-kafka"
version = "0.1.0"
description = ""
authors = ["you"]
package-mode = false



